# ce19

./: .gitignore  BUILD_WINDOWS_DIRECT.bat  README.md  build_windows_direct.ps1  comprobar_cmake_archivo.cmake  crear_instalador.py  main.py  pyproject.toml  router.py
core/: app_state.py  backup_datos.py  diagnostico_app.py  error_logger.py  event_bus.py  limpieza_app.py  reparador_datos.py  rutas.py  view_manager.py
datos/: biblia_rvr1960.formato.json
instalador/: crear_instalador.py
logica/: analizador_colores.py  biblia.py  calendario_360.py  carpetas.py  codificador.py  diccionario_hebreo.py  diccionarios.py  exportar_excel.py  guardados.py  historial.py  pizarra_imagen.py  tarjeta_biblica.py
services/: __init__.py  app_config_service.py  app_paths.py  app_startup_service.py  biblia_service.py  busqueda_global_service.py  codificador_service.py  estadisticas_service.py  exportacion_service.py  flet_compat_service.py  guardados_service.py  mantenimiento_service.py  notas_biblia_service.py  notificacion_service.py  rutas_service.py  vistas_registry_service.py
ui/: clipboard.py  compartir.py  componentes_modernos.py  dialogos.py  intro.py  layout_manager.py  nombre_guardado.py  responsive.py  responsive_layout.py  sidebar.py  tareas.py  teclado.py  tema.py
vistas/: analizador_colores.py  biblia.py  calculadora.py  componentes.py  detalle.py  dialogos.py  guardados.py  inicio.py  pizarra.py  tiempo.py
