[project]
name = "codigo-escondido-19"
version = "1.0.0"
description = "CODIGO ESCONDIDO 19"
dependencies = [
    "flet-audio==0.85.3",
]

[tool.flet]
product = "CODIGO ESCONDIDO 19"
project = "codigo_escondido_19"
company = "CODIGO ESCONDIDO 19"
copyright = "CODIGO ESCONDIDO 19"
org = "com.flet"
bundle_id = "com.flet.app_ce_19"
