[project]
name = "codigo-escondido-19"
version = "1.0.1"
description = "CODIGO ESCONDIDO 19"
dependencies = [
    "flet",
    "flet-audio",
    "pillow",
]

[tool.flet]
product = "CODIGO ESCONDIDO 19"
project = "codigo_escondido_19"
company = "CODIGO ESCONDIDO 19"
copyright = "CODIGO ESCONDIDO 19"
org = "com.flet"
bundle_id = "com.flet.app_ce_19"

[tool.flet.app]
exclude = [
    ".git",
    ".github",
    ".venv",
    "env",
    "build",
    "dist",
    "dist_windows",
    "backups",
    "logs",
    "storage",
    "instalador",
    "__pycache__",
    "*.pyc",
    "README.md",
    ".gitignore",
    "datos/exportaciones",
    "datos/historial.json",
    "datos/guardados.json",
    "datos/carpetas.json",
    "datos/config_tiempo.json",
    "datos/analisis_colores_historial.json",
    "datos/historial_referencias_biblia.json",
    "datos/favoritos_biblia.json",
    "datos/notas_biblia.json",
    "datos/resaltados_biblia.json",
    "datos/ultima_lectura_biblia.json",
]

[tool.flet.cleanup]
app = true
